--- a/React-Project/src/index.css
+++ b/React-Project/src/index.css
@@ -1,14 +1,21 @@
+
+
 .card{
-margin: 20px;
-background-color: aquamarine;
-align-content: center;
+background-color: antiquewhite;
+max-width: 200px;
+border-radius: 1px solid black;
+font-family: 'Courier New', Courier, monospace;
+margin: 10px;
+padding: 2px;
+text-align: center;
+display: inline-block;
+vertical-align: top;
+height: 350px;
+
 }
 
-.title{
-    color: aqua;
-    padding: 20px;
-    align-content: center;
-    margin: auto;
-    width: 80%;
-    height: 100px;
+.card img{
+width: 200px;
+height: 150px;
+object-fit: cover;
 }
